# django-conoha-objstorage

./: .gitignore  LICENSE  README.md  setup.cfg  setup.py
django_conoha_objstorage/: backend.py
