[metadata]
name = django-conoha-objstorage
version = attr: django_conoha_objstorage.__version__
url = https://github.com/ni1mi213/django-conoha-objstorage
author = ni1mi213
author_email = niimi213.py@gmail.com
license_file = LICENSE
description = django-conoha-objectstorage: A package that uses ConohaObjectStorage with Django.
#long_description = file: README.rst

[options]
zip_safe = False
packages = find:
install_requires =
  python-swiftclient
  python-keystoneclient
